--- a/lang/kor/README-kor.adoc
+++ b/lang/kor/README-kor.adoc
@@ -27,18 +27,18 @@ Vulkan Guide는 `asciidoctor guide.adoc` 를 사용해 하나의 페이지로서
 ====
 [NOTE]
 ====
-Vulkan에서 사용하는 특수한 용어에 대한 혼란을 막기 위해 명령과 연관된 경우 번역하지 않고 용어 발음을 그대로 사용하였습니다.
-`Attachment` 첨부 - (주로 이미지) 버퍼 데이터를 원하는 용도로 장치가 사용할 수 있게 제공합니다.
-`Binding` 바인딩 - 장치, 데이터 등을 원하는 참조에 연결하는 동작
-`Device` 장치 - 일반적으로 GPU 처리 장치를 의미
-`Extension` 확장판, 확장기능 - 표준에 정의돼 있지 않으나 특별한 기능을 제공하기 위해 제공되는 확장 기능으로, 크로노스 그룹의 공식 확장판과 각 기업이 추가한 벤더 확장판이 있음
-`Expose` 노출/공개 - (드라이버가 애플리케이션이) 사용할 수 있도록 정보를 노출한다는 의미
-`Layer` 레이어 - 특정한 (주로 검증) 목적을 위해 구성된 Vulkan 소프트웨어 계층
-`Layout` 레이아웃 - 데이터(주로 이미지)의 형식이나 종류를 의미
-`Render Pass` 렌더패스 - 실제 그리는 동작을 규정하는 하나의 작업 단위를 정의
-`Sparse Memory` 희소 메모리 - 큰 크기의 이미지로 정의하지만, 실제로는 작은 부분의 이미지만을 사용하는 메모리 관리 방식
-`State` 스테이트 - 파이프 라인 스테이트 변수를 의미
-`Stage` 스테이지 - 파이프라인의 처리 단계를 의미
+Vulkan에서 사용하는 특수한 용어에 대한 혼란을 막기 위해 명령과 연관된 경우 번역하지 않고 용어 발음을 그대로 사용하였습니다. +
+`Attachment` 첨부 - (주로 이미지) 버퍼 데이터를 원하는 용도로 장치가 사용할 수 있게 제공합니다. +
+`Binding` 바인딩 - 장치, 데이터 등을 원하는 참조에 연결하는 동작 +
+`Device` 장치 - 일반적으로 GPU 처리 장치를 의미 +
+`Extension` 확장판, 확장기능 - 표준에 정의돼 있지 않으나 특별한 기능을 제공하기 위해 제공되는 확장 기능으로, 크로노스 그룹의 공식 확장판과 각 기업이 추가한 벤더 확장판이 있음 +
+`Expose` 노출/공개 - (드라이버가 애플리케이션이) 사용할 수 있도록 정보를 노출한다는 의미 +
+`Layer` 레이어 - 특정한 (주로 검증) 목적을 위해 구성된 Vulkan 소프트웨어 계층 +
+`Layout` 레이아웃 - 데이터(주로 이미지)의 형식이나 종류를 의미 +
+`Render Pass` 렌더패스 - 실제 그리는 동작을 규정하는 하나의 작업 단위를 정의 +
+`Sparse Memory` 희소 메모리 - 큰 크기의 이미지로 정의하지만, 실제로는 작은 부분의 이미지만을 사용하는 메모리 관리 방식 +
+`State` 스테이트 - 파이프 라인 스테이트 변수를 의미 +
+`Stage` 스테이지 - 파이프라인의 처리 단계를 의미 +
 ====
 
 :leveloffset: 1
